Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95282

Clicking on a link in a PDF does not trigger any navigation event

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2
    • 5.15.4, 5.15.5
    • WebEngine
    • None
    • 375a79c6a (134-based-refactor)

      When  clicking on an external link in the PDF viewer, no navigation/load events are emitted and urlChanged() is not emitted.

      Once the page is opened, going back does not bring back to the PDF but to the page before.

      It is looking like the navigation happens in the PDF plugin container.

        For Gerrit Dashboard: QTBUG-95282
        # Subject Branch Project Status CR V

            davidsz Szabolcs David
            bterrier Benjamin Terrier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes