[pdf] Fix navigation when clicking on links in a PDF

Implement a very limited version of chrome.tabs.update() JavaScript API
with only one functionality: navigating the current WebContents when an
URL update was requested.

Task-number: QTBUG-95282
Change-Id: I9628262ed73aefb2ef53934e724444dd3378a9ad
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>